header and footer with responsive DONE

--- a/index.html
+++ b/index.html
@@ -11,9 +11,31 @@
 </head>
 <body>
     <main class="main">
-        <!-- logo  WindsMeet : two Clouds icons with plane in middle and when hovered  winds moves -->
+        <header>
+            <div class="logo-container">                        
+                <div class="sky">
+                    <i class="fa-solid fa-cloud cloud1"></i>
+                    <i class="fa-solid fa-plane"></i>
+                    <i class="fa-solid fa-cloud cloud2"></i>
+                </div>
+                <h1 class="name">WindsMeet</h1>
+            </div>
 
-        
+            <div class="nav-links">
+                <ul class="links-list">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Tours</a></li>
+                </ul>
+
+                <ul class="links-list2">
+                    <li><a href="#">Login</a></li>
+                    <li><a class="register" href="#">Register</a></li>
+                </ul>
+
+            </div>
+            <i id="burger-menu" class="fa-solid fa-bars  "></i> <!-- fa-bars-staggered -->
+        </header>
 
 
 
@@ -29,7 +51,6 @@
 
 
         <footer id="about" class="footer-container">
-            <img class="leaf-1" src="images/leaf.png" alt="">
             <div class="footer">
                 <div class="company">
                     <div class="logo-container">
@@ -123,5 +144,6 @@
             </div>
         </footer>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
