register done with responsive

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
             </div>
         </footer>
     </main>
+
+    <div onclick="return_home()" class="up-home-arrow">
+        <i class="ri-arrow-up-s-line"></i>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
