--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
                     <i class="ri-google-fill"></i>
                     <i class="ri-apple-fill"></i>
                 </div>
-                <p>Don’t have account? <span class="reg-now" onclick="location.href='register.html'">Register Now</span></p>
+                <p class="dontHave">Don’t have account? <span class="reg-now" onclick="location.href='register.html'">Register Now</span></p>
                 
             </div>
         </section>
@@ -167,6 +167,9 @@
             </div>
         </footer>
     </main>
+    <div onclick="return_home()" class="up-home-arrow">
+        <i class="ri-arrow-up-s-line"></i>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
