--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 
             <div class="nav-links">
                 <ul class="links-list">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Tours</a></li>
                 </ul>
