gallery And testimonal

--- a/index.html
+++ b/index.html
@@ -168,6 +168,80 @@
             </div>
         </section>
 
+        <section class="gallery-container-sec">
+            <h3 class="exploreWord">Gallery</h3>
+            <h2>Visit our customers tour gallery</h2>
+            <div class="gallery-container">
+                <div class="gallery1">
+                    <img class="gallery1-img1" src="images/aboutUs.png" alt="state-view">
+                    <img class="gallery1-img2" src="images/gallery2.png" alt="state-view">
+                </div>
+                <div class="gallery2">
+                    <img class="gallery2-img1 " src="images/gallery3.png" alt="state-view">
+                    <img class="gallery2-img2 " src="images/gallery5.png" alt="state-view">
+                </div>
+
+                <div class="gallery3">
+                    <img class="gallery3-beach" src="images/gallery4.png" alt="state-view">
+                    <div class="gallery3-2">
+                        <img class="gallery3-img1"  src="images/gallery6.png" alt="state-view">
+                    </div>
+                </div>
+                <div class="gallery4">
+                    <img class="gallery2-img1 " src="images/gallery7.png" alt="state-view">
+                    <img class="gallery2-img2 " src="images/gallery8.png" alt="state-view">
+                </div>
+                <div class="gallery5">
+                    <img class="gallery5-img1 " src="images/gallery10.png" alt="state-view">
+                    <img class="gallery5-img2 " src="images/gallery9.png" alt="state-view">
+                </div>
+
+
+            </div>
+        </section>
+
+        <section class="testimonal-container">
+            <h3 class="exploreWord">Fans Love</h3>
+            <h2>What our fans say about us</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                    <img src="images/fan1.png" class="card-img-top" alt="fan ">
+                    <div class="card-body">
+                        <h5 class="card-title">Ibrahem</h5>
+                        <p class="card-text">Amazing destinations, great prices, and professional planning. This agency truly cares about creating memorable experiences. I would recommend them to anyone looking for a perfect getaway.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Last updated 1 day ago</small>
+                    </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                    <img src="images/fan2.png" class="card-img-top" alt="fan ">
+                    <div class="card-body">
+                        <h5 class="card-title">Omar</h5>
+                        <p class="card-text">The team was incredibly helpful and responsive. They customized our trip exactly the way we wanted and handled every detail smoothly. Traveling has never been this easy and stress-free.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Last updated 11 mins ago</small>
+                    </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                    <img src="images/me.jpg" class="card-img-top" alt="fan ">
+                    <div class="card-body">
+                        <h5 class="card-title">ِAbdul-Rahman</h5>
+                        <p class="card-text">From the very first booking until the end of our trip, everything was perfectly organized. The destinations were stunning and the service exceeded our expectations. I can’t wait to book my next adventure with them!</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Last updated 5 hours ago</small>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         
 
 
@@ -177,21 +251,21 @@
                 <div class="contact-information-card1 card">
                     <i class="ri-map-pin-line"></i>
                     <div class="contact-txt">
-                        <h3>Our Location</h3>
+                        <h4>Our Location</h4>
                         <p>11.New ST. Shobra, Cairo , Egypt</p>
                     </div>
                 </div>
                 <div class="contact-information-card2 card">
                     <i class="ri-phone-line"></i>
                     <div class="contact-txt">
-                        <h3>Call Us 24/7</h3>
+                        <h4>Call Us 24/7</h4>
                         <h2>(+20) 111-3545-007</h2>
                     </div>
                 </div>
                 <div class="contact-information-card3 card">
                     <i class="ri-mail-line"></i>
                     <div class="contact-txt">
-                        <h3>SUBSCRIBE NEWSLTTER</h3>
+                        <h4>SUBSCRIBE NEWSLTTER</h4>
                         <div class="email-address-container">
                             <input class="email-field" type="text" placeholder="Your email address">
                             <button class="subscribe-btn">Subscribe</button>
