--- a/index.html
+++ b/index.html
@@ -168,6 +168,40 @@
             </div>
         </section>
 
+        <section class="experience-container">
+            <div class="experience-text">
+                <h3 class="exploreWord">Experience</h3>
+                <h2>With years of experience <br> We create journeys you’ll never forget</h2>
+                <p class="ex-paragraph">At WindsMeet , we combine passion, expertise, and attention to detail to deliver exceptional travel experiences. <br>
+                    Our team works tirelessly to plan every trip with care — from choosing the best destinations <br>
+                        To ensuring comfort, safety, and unforgettable memories for every traveler.
+                </p>
+                <div class="records-container">
+                    <div class="record-card">
+                        <div class="record-value">
+                            <h2>12k+</h2>
+                        </div>
+                        <h5>Successful trip</h5>
+                    </div>
+                    <div class="record-card">
+                        <div class="record-value">
+                            <h2>12k+</h2>
+                        </div>
+                        <h5>Successful trip</h5>
+                    </div>
+                    <div class="record-card">
+                        <div class="record-value">
+                            <h2>12k+</h2>
+                        </div>
+                        <h5>Successful trip</h5>
+                    </div>
+                </div>
+            </div>
+            
+            <img src="images/testimonal.png" alt="testimonal">
+
+        </section>
+
         <section class="gallery-container-sec">
             <h3 class="exploreWord">Gallery</h3>
             <h2>Visit our customers tour gallery</h2>
