--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="images/plane-solid-full.svg">
     
     <title>WindsMeet</title>
 </head>
@@ -185,15 +186,15 @@
                     </div>
                     <div class="record-card">
                         <div class="record-value">
-                            <h2>12k+</h2>
+                            <h2>2k+</h2>
                         </div>
-                        <h5>Successful trip</h5>
+                        <h5>Regular clients</h5>
                     </div>
                     <div class="record-card">
                         <div class="record-value">
-                            <h2>12k+</h2>
+                            <h2>15 </h2>
                         </div>
-                        <h5>Successful trip</h5>
+                        <h5>Year experience</h5>
                     </div>
                 </div>
             </div>
