--- a/tours.html
+++ b/tours.html
@@ -28,8 +28,8 @@
             <div class="nav-links">
                 <ul class="links-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Tours</a></li>
+                    <li><a href="aboutUs.html">About</a></li>
+                    <li><a href="tours.html">Tours</a></li>
                 </ul>
 
                 <ul class="links-list2">
@@ -175,9 +175,9 @@
                     <h2 class="links-title">Discover</h2>
                     <hr>
                     <ul class="footer-links">
-                        <li>Home</li>
-                        <li>About</li>
-                        <li onclick="location.href='.html'">Tours</li>
+                        <li onclick="location.href='index.html'">Home</li>
+                        <li onclick="location.href='aboutUs.html'">About</li>
+                        <li onclick="location.href='tours.html'">Tours</li>
                         
                     </ul>
                 </div>
@@ -186,7 +186,7 @@
                     <hr>
                     <ul class="footer-links">
                         
-                        <li>Gallery</li>
+                        <li onclick="location.href='tours.html'">Gallery</li>
                         <li onclick="location.href='login.html'">Login</li>
                         <li onclick="location.href='register.html'" >Register</li>
                     </ul>
