--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="logo-container">                        
                 <div class="sky">
                     <i class="fa-solid fa-cloud cloud1"></i>
-                    <i class="fa-solid fa-plane"></i>
+                    <i class="fa-solid fa-plane planeLogo"></i>
                     <i class="fa-solid fa-cloud cloud2"></i>
                 </div>
                 <h1 class="name">WindsMeet</h1>
@@ -25,9 +25,9 @@
 
             <div class="nav-links">
                 <ul class="links-list">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Tours</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="aboutUs.html">About</a></li>
+                    <li><a href="tours.html">Tours</a></li>
                 </ul>
 
                 <ul class="links-list2">
@@ -342,9 +342,9 @@
                     <h2 class="links-title">Discover</h2>
                     <hr>
                     <ul class="footer-links">
-                        <li>Home</li>
-                        <li>About</li>
-                        <li onclick="location.href='.html'">Tours</li>
+                        <li onclick="location.href='index.html'">Home</li>
+                        <li onclick="location.href='aboutUs.html'">About</li>
+                        <li onclick="location.href='tours.html'">Tours</li>
                         
                     </ul>
                 </div>
@@ -353,7 +353,7 @@
                     <hr>
                     <ul class="footer-links">
                         
-                        <li>Gallery</li>
+                        <li onclick="location.href='tours.html'">Gallery</li>
                         <li onclick="location.href='login.html'">Login</li>
                         <li onclick="location.href='register.html'" >Register</li>
                     </ul>
