--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <i class="fa-solid fa-plane planeLogo"></i>
                     <i class="fa-solid fa-cloud cloud2"></i>
                 </div>
-                <h1 class="name">WindsMeet</h1>
+                <h1 class="name" onclick="location.href='index.html'">WindsMeet</h1>
             </div>
 
             <div class="nav-links">
