--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,10 +18,10 @@
             <div class="logo-container">                        
                 <div class="sky">
                     <i class="fa-solid fa-cloud cloud1"></i>
-                    <i class="fa-solid fa-plane"></i>
+                    <i class="fa-solid fa-plane planeLogo"></i>
                     <i class="fa-solid fa-cloud cloud2"></i>
                 </div>
-                <h1 class="name">WindsMeet</h1>
+                <h1 class="name" onclick="location.href='index.html'">WindsMeet</h1>
             </div>
 
             <div class="nav-links">
